Added the font-awesome keyboard icon to the font build Added a hotkeys section for when I forgot

--- a/conky.conf
+++ b/conky.conf
@@ -76,6 +76,10 @@ Host:${alignr}${nodename}
 Uptime:${alignr}${uptime}
 Processes:${alignr}${running_processes} / ${processes}
 
+${template0 HOTKEYS  }
+${font}Screenshot to Pictures ${alignr} Shift+Super+3
+${font}Screenshot to Clipboard ${alignr} Shift+Super+4
+
 ${template0 CPU }
 ${font}${execi 3600 grep model /proc/cpuinfo | cut -d : -f2 | tail -1 | sed 's/\s//'} ${alignr} ${cpu cpu0}%
 ${color3}${lua make_cpu_graph}${color}
