--- a/font/build
+++ b/font/build
@@ -28,6 +28,7 @@ f019    #download
 f01c    #inbox
 f073    #calendar
 f085    #cogs
+f11c    #keyboard
 f093    #upload
 f0a0    #hdd
 f0ac    #globe
